# Exception

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Config.cmake.in  README.md
.github/workflows/: msbuild.yml
examples/: CMakeLists.txt  exception.cpp
general/: BaseException.cpp  BaseException.h  CMakeLists.txt  ExceptionExport.h  SocketException.cpp  SocketException.h  version.h.in
msvc/: Exception.sln  Exception.vcxproj  Exception.vcxproj.filters
